tup/parse/testdata/error/review/expressions.tup
# unclosed tuple literal
_ = (1, 2

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:10: error: expecting ")", got ""

# unclosed array literal
_ = [1, 2, 3

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13: error: expecting "]", got ""

# binary expression missing right operand
_ = 1 +

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:8: error: expecting "expression", got ""

# unclosed block
_ = {
    x = 1
    x

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:3:6: error: expecting "}", got ""

# if expression missing condition
_ = if

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:7: error: expecting "expression", got ""

# if expression missing then branch
_ = if true

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:12: error: expecting "block", got ""

# if expression with block condition missing then branch
_ = if { 1 }

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13: error: expecting "block", got ""

# function call missing closing paren
_ = foo(1, 2

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13: error: expecting ")", got ""

# labeled tuple literal missing colon
_ = (a 1, b: 2, c: 3)

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:5: error: expecting "expression", got "("

# labeled tuple literal trailing unlabeled member
_ = (a: 1, b: 2, c)

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:18: error: expecting ")", got "c"

# member access missing field name
_ = user.

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:10: error: expecting "field name", got ""

# tuple update with unlabeled tuple
_ = user.(1, 2)

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:11: error: expecting "field name", got "1"

# import with identifier instead of string
_ = import(io)

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:12: error: expecting "string literal", got "io"

# meta expression missing labeled arguments
_ = $()

/home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:7: error: expecting "labeled argument", got ")"
